force-app/main/default/objects/Exl_POEType_POELength_Mapping__mdt/Exl_POEType_POELength_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>POE Type POE Length Mapping</label>
    <pluralLabel>POE Type POE Length Mappings</pluralLabel>
</CustomObject>