force-app/main/default/objects/Exl_POEType_POELength_Mapping__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NICC Exclusion in NSW</fullName>
                <default>true</default>
                <label>NICC Exclusion in NSW</label>
            </value>
            <value>
                <fullName>Police Exclusion in NSW</fullName>
            </value>
            <value>
                <fullName>Police Exclusion in QLD</fullName>
            </value>
            <value>
                <fullName>Problem Gambling in both states</fullName>
            </value>
            <value>
                <fullName>Self Exclusion in NSW with Problem Gambling in Qld</fullName>
            </value>
            <value>
                <fullName>Self Exclusion in QLD with Problem Gambling in NSW</fullName>
            </value>
            <value>
                <fullName>Self Exclusion in both states</fullName>
            </value>
            <value>
                <fullName>Venue Exclusion in NSW</fullName>
            </value>
            <value>
                <fullName>Venue Exclusion in QLD</fullName>
            </value>
            <value>
                <fullName>WOL AML + Venue AML in NSW</fullName>
            </value>
            <value>
                <fullName>WOL in NSW</fullName>
            </value>
            <value>
                <fullName>WOL in QLD</fullName>
            </value>
            <value>
                <fullName>TP7DAY</fullName>
            </value>
            <value>
                <fullName>TP24HR</fullName>
            </value>
            <value>
                <fullName>Extend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>