force-app/main/default/objects/Exl_POEType_POELength_Mapping__mdt/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Length Default</label>
    <type>Checkbox</type>
</CustomField>