force-app/main/default/objects/Exl_POEType_POELength_Mapping__mdt/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>