force-app/main/default/objects/Exl_POEType_POELength_Mapping__mdt/fields/POE_Area_Default__c.field-meta.xml
<CustomField>
    <fullName>POE_Area_Default__c</fullName>
    <label>POE Area Default</label>
    <length>50</length>
    <type>Text</type>
</CustomField>