force-app/main/default/objects/Exl_POEType_POELength_Mapping__mdt/fields/POE_Length__c.field-meta.xml
<CustomField>
    <fullName>POE_Length__c</fullName>
    <label>POE Length</label>
    <length>10</length>
    <type>Text</type>
</CustomField>