force-app/main/default/objects/Exl_POEType_POELength_Mapping__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>Case_Type__c</columns>
    <columns>POE_Type__c</columns>
    <columns>Jurisdiction__c</columns>
    <columns>POE_Length__c</columns>
    <columns>Default__c</columns>
    <columns>POE_Area_Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>